# Tangent

./: LICENSE  README.md
shiam-code-clion/: .gitignore  CMakeLists.txt  LICENSE  README.md
shiam-code-clion/assets/phrases/: library.json
shiam-code-clion/scripts/: cognee_memory.py  setup.sh
shiam-code-clion/src/: main.cpp
shiam-code-clion/src/audio/: mic_capture.cpp  mic_capture.h  playback.cpp  playback.h  soundscape_gen.cpp  soundscape_gen.h  wav_writer.h
shiam-code-clion/src/config/: phrase_library.cpp  phrase_library.h  session_types.h
shiam-code-clion/src/llm/: ollama_client.cpp  ollama_client.h
shiam-code-clion/src/memory/: cognee_bridge.cpp  cognee_bridge.h
shiam-code-clion/src/stt/: whisper_engine.cpp  whisper_engine.h
shiam-code-clion/src/tts/: piper_engine.cpp  piper_engine.h
